--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The World From the View of a High Schooler</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The World From the View of a High Schooler</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 40px;
+            text-align: center;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            font-size: 18px;
+            color: #666;
+        }
+    </style>
 </head>
-
+<body>
+    <h1>Welcome to My Website!</h1>
+    <p>This is a simple webpage hosted on GitHub Pages.</p>
+    <p>Stay tuned for more content about life from the perspective of a high schooler!</p>
+</body>
+</html>
