--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My Website!</h1>
-    <p>This is a simple webpage hosted on GitHub Pages.</p>
-    <p>Stay tuned for more content about life from the perspective of a high schooler!</p>
+    <h1>Welcome to My Website :D</h1>
+    <p>blablablaba</p>
+    <p>beepboopbeepboop</p>
 </body>
 </html>
