--- a/index.html
+++ b/index.html
@@ -7,21 +7,61 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 40px;
+            margin: 0;
+            padding: 0;
             text-align: center;
+            background-image: url('https://source.unsplash.com/1600x900/?sky,landscape'); /* Change to your own image */
+            background-size: cover;
+            background-position: center;
+            color: white;
+        }
+        nav {
+            background: rgba(0, 0, 0, 0.7);
+            padding: 15px;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            font-size: 18px;
+            margin: 0 15px;
         }
         h1 {
-            color: #333;
+            margin-top: 100px;
+            font-size: 36px;
         }
         p {
+            font-size: 20px;
+        }
+        .btn {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
             font-size: 18px;
-            color: #666;
+            color: white;
+            background: #ff6600;
+            border: none;
+            cursor: pointer;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+        .btn:hover {
+            background: #ff4500;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to My Website :D</h1>
-    <p>blablablaba</p>
-    <p>beepboopbeepboop</p>
+
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+    </nav>
+
+    <h1>Welcome to My Website!</h1>
+    <p>Exploring life through the eyes of a high schooler.</p>
+    
+    <a href="#" class="btn">Read My Blog</a>
+
 </body>
 </html>
