--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             color: white;
         }
         nav {
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(40, 102, 128, 0.8);
             padding: 15px;
         }
         nav a {
@@ -27,7 +27,7 @@
         }
         h1 {
             margin-top: 100px;
-            font-size: 36px;
+            font-size: 45px;
         }
         p {
             font-size: 20px;
@@ -37,7 +37,7 @@
             margin-top: 20px;
             padding: 10px 20px;
             font-size: 18px;
-            color: white;
+            color: black;
             background: #ff6600;
             border: none;
             cursor: pointer;
