--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
         <a href="#">Contact</a>
     </nav>
 
-    <h1>Welcome to My Website!</h1>
-    <p>Exploring life through the eyes of a high schooler.</p>
-    
-    <a href="#" class="btn">Read My Blog</a>
-
+    <div class="content">
+        <h1>Welcome to My Website!</h1>
+        <p>Exploring life through the eyes of a high schooler.</p>
+        <a href="#" class="btn">Read My Blog</a>
+    </div>
 </body>
 </html>
