--- a/index.html
+++ b/index.html
@@ -65,4 +65,10 @@
         <a href="#" class="btn">Read My Blog</a>
     </div>
 </body>
+<nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="blog.html">Blog</a>
+    <a href="contact.html">Contact</a>
+</nav>
 </html>
