--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
             margin: 0;
             padding: 0;
             text-align: center;
-            background-image: url('https://source.unsplash.com/1600x900/?sky,landscape'); /* Change to your own image */
+            background: linear-gradient(217deg, rgba(0, 116, 164, 0.8), rgba(255,0,0,0) 70.71%),
+                        linear-gradient(127deg, rgba(0, 98, 93, 0.8), rgba(0,255,0,0) 70.71%),
+                        linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
             background-size: cover;
             background-position: center;
             color: white;
         }
         nav {
             background: rgba(40, 102, 128, 0.8);
+    
             padding: 15px;
         }
         nav a {
@@ -40,14 +43,14 @@
             padding: 10px 20px;
             font-size: 18px;
             color: black;
-            background: #ff6600;
+            background: #2c3798cc;
             border: none;
             cursor: pointer;
             text-decoration: none;
             border-radius: 5px;
         }
         .btn:hover {
-            background: #ff4500;
+            background: #202a81ed;
         }
     </style>
 </head>
@@ -61,14 +64,14 @@
     </nav>
 
     <div class="content">
-        <h1>Welcome to My Website!</h1>
-        <p>Exploring life through the eyes of a high schooler.</p>
-        <a href="#" class="btn">Read My Blog</a>
+        <h1>The World From the View of a High Schooler</h1>
+        <p>This is a blog, made by high schoolers, for high schoolers exploring life through the eyes of a high schooler.</p>
+        <a href="#" class="btn">Get In Touch</a>
     </div>
 </body>
 <nav>
     <a href="index.html">Home</a>
-    <a href="about.html">About</a>
+    <a href="about.html">About Me</a>
     <a href="blog.html">Blog</a>
     <a href="contact.html">Contact</a>
 </nav>
