--- a/blog.html
+++ b/blog.html
@@ -16,14 +16,12 @@
     </nav>
 
     <div class="content">
-        <h1>My Blog</h1>
-        <p>Welcome to my blog! Here, I'll share my thoughts, experiences, and stories.</p>
+        <h1>The World From the View of a High Schooler</h1>
+        <p>You can view the blog posts in order below</p>
 
-        <h2>Latest Posts</h2>
+        <h2>Posts</h2>
         <ul>
-            <li><a href="#">Post 1: My First Blog Post</a></li>
-            <li><a href="#">Post 2: A Day in My Life</a></li>
-            <li><a href="#">Post 3: My Favorite Hobbies</a></li>
+            <li><a href="#">DOGE, USAID, and the Social Security Administration</a></li>
         </ul>
     </div>
 
