--- a/blog.html
+++ b/blog.html
@@ -26,4 +26,7 @@
     </div>
 
 </body>
+<ul>
+    <li><a href="doge-usaid-ssa.html">DOGE, USAID, and the Social Security Administration</a></li>
+</ul>
 </html>
