--- a/doge-usaid-ssa.html
+++ b/doge-usaid-ssa.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DOGE, USAID, and the Social Security Administration</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="blog.html">Blog</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+
+    <div class="content">
+        <h1>DOGE, USAID, and the Social Security Administration</h1>
+        <p>Welcome to a discussion on DOGE, USAID, and the Social Security Administration.
+
+Note: Any and all topics and events discussed today are true, but they might be distorted because of personal views and biases. If you want to look at cold, hard facts, and for a more objective account, please refer to the source notes linked below. 
+
+DOGE, which stands for Department of Government Efficiency, is led by Elon Musk. This Department is attempting to get access to the Social Security Administration (SSA) data, which is of course causing nationwide worry because the SSA holds a lot of sensitive personal information about many Americans. 
+
+Recently, a coalition of labor unions petitioned a federal court to urgently prevent DOGE from obtaining access to millions of Americans' sensitive Social Security data. On Friday, March 7th, the legal advocacy group Democracy Forward submitted an emergency motion in a Maryland federal court against the SSA and its acting commissioner, Leland Dudek. The unions are seeking a court order to block DOGE from accessing the extensive personal information stored by the SSA.
+.....etc
+</p>
+    </div>
+
+</body>
+</html>
