--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="blog.html">Blog</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+
+    <div class="content">
+        <h1>Get In Touch!</h1>
+        <p>Thanks for visiting my blog post!</p>
+        <p>You can text me at: (512)-537-9692</p>
+        <p>Or</p>
+        <p>Email me at: arttanigoods@icloud.com</p>
+        <p>Have a nice day!</p>
+    </div>
+
+</body>
+</html>
