--- a/doge-usaid-ssa.html
+++ b/doge-usaid-ssa.html
@@ -17,7 +17,8 @@
 
     <div class="content">
         <h1>DOGE, USAID, and the Social Security Administration</h1>
-        <p>Welcome to a discussion on DOGE, USAID, and the Social Security Administration.
+            <p>text incoming...<p>
+     <!--   <p>Welcome to a discussion on DOGE, USAID, and the Social Security Administration.
 
 Note: Any and all topics and events discussed today are true, but they might be distorted because of personal views and biases. If you want to look at cold, hard facts, and for a more objective account, please refer to the source notes linked below. 
 
@@ -25,7 +26,7 @@ DOGE, which stands for Department of Government Efficiency, is led by Elon Musk.
 
 Recently, a coalition of labor unions petitioned a federal court to urgently prevent DOGE from obtaining access to millions of Americans' sensitive Social Security data. On Friday, March 7th, the legal advocacy group Democracy Forward submitted an emergency motion in a Maryland federal court against the SSA and its acting commissioner, Leland Dudek. The unions are seeking a court order to block DOGE from accessing the extensive personal information stored by the SSA.
 .....etc
-</p>
+</p> -->
     </div>
 
 </body>
