--- a/blog.html
+++ b/blog.html
@@ -21,12 +21,12 @@
 
         <h2>Posts</h2>
         <ul>
-            <li><a href="#">DOGE, USAID, and the Social Security Administration</a></li>
+            <li><a href="#">A letter to the White House</a></li>
         </ul>
     </div>
 
 </body>
 <ul>
-    <li><a href="doge-usaid-ssa.html">DOGE, USAID, and the Social Security Administration</a></li>
+    <li><a href="doge-usaid-ssa.html">A letter to the White House</a></li>
 </ul>
 </html>
