--- a/doge-usaid-ssa.html
+++ b/doge-usaid-ssa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOGE, USAID, and the Social Security Administration</title>
+    <title>A letter to the White House</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,17 +16,12 @@
     </nav>
 
     <div class="content">
-        <h1>DOGE, USAID, and the Social Security Administration</h1>
-            <p>text incoming...<p>
-     <!--   <p>Welcome to a discussion on DOGE, USAID, and the Social Security Administration.
+        <h1>A letter to the White House</h1>
+            <p>To the White House,
 
-Note: Any and all topics and events discussed today are true, but they might be distorted because of personal views and biases. If you want to look at cold, hard facts, and for a more objective account, please refer to the source notes linked below. 
-
-DOGE, which stands for Department of Government Efficiency, is led by Elon Musk. This Department is attempting to get access to the Social Security Administration (SSA) data, which is of course causing nationwide worry because the SSA holds a lot of sensitive personal information about many Americans. 
-
-Recently, a coalition of labor unions petitioned a federal court to urgently prevent DOGE from obtaining access to millions of Americans' sensitive Social Security data. On Friday, March 7th, the legal advocacy group Democracy Forward submitted an emergency motion in a Maryland federal court against the SSA and its acting commissioner, Leland Dudek. The unions are seeking a court order to block DOGE from accessing the extensive personal information stored by the SSA.
-.....etc
-</p> -->
+The policies and rhetoric coming from your administration have not only been deeply concerning but also dehumanizing to countless individuals, communities, and nations. The role of the White House should be to lead with integrity, justice, and humanity, yet time and time again, your actions have demonstrated a disregard for these principles. From the treatment of marginalized communities to the continued support of military interventions that devastate innocent lives abroad, your administration has repeatedly chosen power and control over empathy and justice. The policies you implement and the narratives you push impact real people—people who deserve dignity, respect, and a government that works for their well-being rather than against it. Domestically, the response to social justice movements has been one of suppression rather than understanding. Protestors calling for basic human rights have been met with violence, while systemic issues such as police brutality, mass incarceration, and economic inequality remain unaddressed. Instead of listening to the voices of those suffering, you have prioritized political convenience over meaningful change. Internationally, your administration has continued the long-standing tradition of interventionism, supporting regimes and actions that lead to the suffering of countless civilians. From funding military occupations to imposing sanctions that starve entire populations, your foreign policy choices have caused immense harm while being justified under the guise of national security. True security cannot be achieved through oppression, and global stability will never come from treating human lives as collateral damage. The dehumanization is not just in policy but in the language used to justify these actions. When people fleeing violence are labeled as threats, when activists are painted as agitators, and when war crimes are excused as necessary measures, you strip away the humanity of those affected. Words have power, and the rhetoric coming from the highest office in the country has fueled division, hatred, and the normalization of cruelty. The White House must be held accountable. Leadership is not about maintaining power at any cost—it is about serving the people with honesty and compassion. If you truly believe in democracy, justice, and human rights, then your actions must reflect those values. Until then, history will remember the cruelty, the indifference, and the suffering caused under your watch. It is not too late to change course, to listen to the people rather than suppress them, to value human lives over political gain. But that change must start with recognizing the harm that has been done and taking real, meaningful steps to repair it.
+Sincerely,
+The World From the View of a High Schooler<p>
     </div>
 
 </body>
