--- a/about.html
+++ b/about.html
@@ -17,8 +17,7 @@
 
     <div class="content">
         <h1>About Me</h1>
-        <p>Hi! I'm a high schooler sharing my experiences and thoughts with the world.</p>
-        <p>Stay tuned for more about my journey, interests, and insights!</p>
+        <p>We are high schoolers sharing our experiences and thoughts about the world.</p>
     </div>
 
 </body>
