--- a/blog.html
+++ b/blog.html
@@ -27,6 +27,6 @@
 
 </body>
 <ul>
-    <li><a href="doge-usaid-ssa.html">A letter to the White House</a></li>
+    <li><a href="letter-white-house.html">A letter to the White House</a></li>
 </ul>
 </html>
