--- a/blog.html
+++ b/blog.html
@@ -23,6 +23,8 @@
         <ul>
             <li><a href="letter-white-house.html">A letter to the White House</a></li>
         </ul>
+    </ul>
+        <li><a href="#">Coming soon...</li>
     </div>
 </body>
 </html>
