--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 <body>
 
     <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Blog</a>
-        <a href="#">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="blog.html">Blog</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
     <div class="content">
@@ -69,10 +69,4 @@
         <a href="#" class="btn">Get In Touch</a>
     </div>
 </body>
-<nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About Me</a>
-    <a href="blog.html">Blog</a>
-    <a href="contact.html">Contact</a>
-</nav>
 </html>
