--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,7 @@
     <div class="content">
         <h1>Get In Touch!</h1>
         <p>Thanks for visiting my blog post!</p>
-        <!--<p></p>-->
-        <!--<p>Or</p>-->
-        <p>Email me at: arttanigoods@icloud.com</p>
+        <p>Email me at: arttaniartist@gmail.com</p>
         <p>Have a nice day!</p>
     </div>
 
