--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
+
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
+    
     <link rel="icon" type="image/png" href="download.png">
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
@@ -8,6 +11,8 @@
     <title>The World From the View of a High Schooler</title>
     <style>
         body {
+              background-color: var(--background);
+              color: var(--text);
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
