--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,10 @@
     </nav>
 
     <div class="content">
-        <h1>Get In Touch!</h1>
-        <p>Thanks for visiting my blog post!</p>
-        <p>Email me at: arttaniartist@gmail.com</p>
-        <p>Have a nice day!</p>
+        <h1>Contact Us</h1>
+        <p>Thank you for visiting our website.<br>We hope we can continue to keep you informed.</p>
+        <p>Email the editor: arttaniartist@gmail.com</p>
+        <p>Have a nice day, and feel free to reach out if you want to see any of your work posted or if you have any comments.</p>
     </div>
 
 </body>
