--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="content">
       <h1>The World From the View of a High Schooler</h1>
       <p>This is a blog, made by high schoolers, for high schoolers exploring life through the eyes of a high schooler.</p>
-      <a href="#" class="btn">Get In Touch</a>
+      <a href="contact.html" class="btn">Get In Touch</a>
     </div>
 
 </body>
