--- a/letters.html
+++ b/letters.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Blog</title>
+    <link rel="stylesheet" href="styles.css">
+    
+    <link rel="icon" type="image/png" href="download.png">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="blog.html">Blog</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+
+    <div class="content">
+        <h1>The World From the View of a High Schooler</h1>
+        <p>You can view the blog posts in order below</p>
+
+        <h2>Posts</h2>
+        <ul>
+            <li><a href="letter-white-house.html">A letter to the White House</a></li>
+        </ul>
+    </ul>
+        <li><a href="#">Coming soon...</li>
+    </div>
+</body>
+</html>
