--- a/about.html
+++ b/about.html
@@ -10,7 +10,15 @@
 </head>
 <body>
 
-   
+<nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="letters.html">Letters</a>
+        <a href="poetry-prose.html"> Poetry and Prose</a>
+        <a href="art.html"> Art</a>
+        <a href="posts.html"> Posts</a>
+        <a href="contact.html">Contact</a>
+    </nav>   
 
     <div class="content">
         <h1>About Me</h1>
