--- a/letters.html
+++ b/letters.html
@@ -11,12 +11,15 @@
 </head>
 <body>
 
-    <nav>
+   <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="blog.html">Blog</a>
+        <a href="letters.html">Letters</a>
+        <a href="poetry-prose.html"> Poetry and Prose</a>
+        <a href="art.html"> Art</a>
+        <a href="posts.html"> Posts</a>
         <a href="contact.html">Contact</a>
-    </nav>
+   </nav>
 
     <div class="content">
         <h1>The World From the View of a High Schooler</h1>
