--- a/letters.html
+++ b/letters.html
@@ -23,7 +23,7 @@
 
     <div class="content">
         <h1>The World From the View of a High Schooler</h1>
-        <p>You can view the blog posts in order below</p>
+        <p>You can view the letters in order below</p>
 
         <h2>Posts</h2>
         <ul>
