--- a/art.html
+++ b/art.html
@@ -28,7 +28,7 @@
         <h2>Posts</h2>
 
     </ul>
-        <li><a href="#">Coming soon...</li>
+        <li><a href="bruised-not-broken.html"> "Bruised, Not Broken" </li>
     </div>
 </body>
 </html>
