--- a/letter-white-house.html
+++ b/letter-white-house.html
@@ -19,6 +19,7 @@
         <a href="art.html"> Art</a>
         <a href="posts.html"> Posts</a>
         <a href="contact.html">Contact</a>
+        <a href="from-the-editor.html"> From the Editor</a>
     </nav>
 
     <div class="content">
