--- a/from-the-editor.html
+++ b/from-the-editor.html
@@ -30,7 +30,7 @@
         <h2>Posts</h2>
 
     </ul>
-        <li><a href="#">Coming soon...</li>
+        <li><a href="from-the-editor2025.html">Coming soon...</li>
     </div>
 </body>
 </html>
