--- a/from-the-editor2025.html
+++ b/from-the-editor2025.html
@@ -1,4 +1,43 @@
-<div id="disqus_thread"></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>From the Editor</title>
+    <link rel="stylesheet" href="styles.css">
+
+    <link rel="icon" type="image/png" href="download.png">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+<nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="letters.html">Letters</a>
+        <a href="poetry-prose.html"> Poetry and Prose</a>
+        <a href="art.html"> Art</a>
+        <a href="posts.html"> Posts</a>
+        <a href="contact.html">Contact</a>
+        <a href="from-the-editor.html"> From the Editor</a>
+    </nav>
+
+
+
+    </div>
+
+</body>
+</html>
+<p> Hello. I am the Editor</p>
+
+</head>
+<body>
+  <div class="letter-container">
+<p>May 28, 2025. <br> Working on getting a comment section, will update soon. Also looking forward to much poetry and artwork from our contributors, we appreciate them very much. Want to become a contributor? Contact us.</p>
+
+    
+  </div>
+    <div id="disqus_thread"></div>
 <script>
     /**
     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
@@ -17,3 +56,9 @@
     })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<script id="dsq-count-scr" src="//https-arttani-artist-github-io-povhs.disqus.com/count.js" async></script>
+</body>
+</html>
+
+
+
