--- a/from-the-editor5-28-25.html
+++ b/from-the-editor5-28-25.html
@@ -39,13 +39,10 @@
   </div>
     <div id="disqus_thread"></div>
 <script>
-    /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-    /
+    
     var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    this.page.url = this.page.url = 'https://arttani-artist.github.io/povhs/from-the-editor2025.html';  
+    this.page.identifier = this.page.identifier = 'editor-post-001'; 
     };
     
     (function() { // DON'T EDIT BELOW THIS LINE
