--- a/from-the-editor.html
+++ b/from-the-editor.html
@@ -30,7 +30,7 @@
         <h2>Posts</h2>
 
     </ul>
-        <li><a href="from-the-editor2025.html">2025 Posts</li>
+        <li><a href="from-the-editor5-28-25.html">2025 Posts</li>
     </div>
 </body>
 </html>
