--- a/from-the-editor.html
+++ b/from-the-editor.html
@@ -31,6 +31,8 @@
 
     </ul>
         <li><a href="from-the-editor5-28-25.html">May 28, 2025</li>
+        <li><a href="from-the-editor5-29-25.html">May 29, 2025</li>
+
     </div>
 </body>
 </html>
