--- a/letters.html
+++ b/letters.html
@@ -30,6 +30,8 @@
         <h2>Posts</h2>
         <ul>
             <li><a href="letter-white-house.html">A letter to the White House</a></li>
+            <li><a href="letter-white-house2.html">Another letter to the White House</a></li>
+
         </ul>
     </ul>
         <li><a href="#">Coming soon...</li>
