--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="download.png">
 </head>
@@ -24,7 +24,7 @@
 
     <div class="content">
         <h1>About Me</h1>
-        <p>We are high schoolers sharing our experiences and thoughts about the world.</p>
+        <p>We are high schoolers sharing our experiences and thoughts about the world. - Editor<br><br>Thank you for visiting our website, we hope we are able to keep you informed.</p>
     </div>
 
 </body>
