--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     </nav>   
 
     <div class="content">
-        <h1>About Me</h1>
+        <h1>About Us</h1>
         <p>We are high schoolers sharing our experiences and thoughts about the world. - Editor<br><br>Thank you for visiting our website, we hope we are able to keep you informed.</p>
     </div>
 
