--- a/bruised-not-broken.html
+++ b/bruised-not-broken.html
@@ -74,7 +74,7 @@
     <br>
     <div></div>
 <body>
-<a href="https://ibb.co/N2rqzJc7"><img src="https://i.ibb.co/v4hW8T0D/IMG-0694.png" alt="IMG-0694" border="1"></a>
+<a href="https://ibb.co/277qbXSG"><img src="https://i.ibb.co/bgg1fpFc/IMG-0694.png" alt="IMG-0694" border="1"></a>
   <p>From the Artist: This piece shows how much pain the patriarchy puts on us, especially people who are seen as weak or expected to stay quiet. The two figures are both hurting—one in blue, one in red—and even though they look different, they're connected by the same pain. The halos behind them are kind of like a twisted version of how society tries to make women's suffering look “beautiful” or “noble,” but in reality, it’s just ignored and normalized. You can see the bruises and blood—they’re not hidden, because the pain is real and shouldn’t be sugarcoated. This artwork is about showing that pain, not hiding it. It’s a way to say: we see what’s happening, we feel it, and we’re not going to be silent about it anymore. Even if we’re hurting, we’re still standing together, and we’re done letting these systems break us apart.</p>
 </body>
 </html>
