--- a/posts.html
+++ b/posts.html
@@ -30,7 +30,7 @@
         <h2>Posts</h2>
 
     </ul>
-        <li><a href="#">Coming soon...</li>
+        <li><a href="weird-dangerous.html"> This Isn’t Just ‘Weird’—It’s Dangerous</li>
     </div>
 </body>
 </html>
