--- a/weird-dangerous.html
+++ b/weird-dangerous.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>This Isn’t Just ‘Weird’—It’s Dangerous</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="download.png">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
+<nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="letters.html">Letters</a>
+        <a href="poetry-prose.html"> Poetry and Prose</a>
+        <a href="art.html"> Art</a>
+        <a href="posts.html"> Posts</a>
+        <a href="contact.html">Contact</a>
+        <a href="from-the-editor.html"> From the Editor</a>
+    </nav>
+
+    <div class="content">
+        <h1>This Isn’t Just ‘Weird’—It’s Dangerous</h1>
+            <p>Written by: Anonymous Contributor<br>
+
+    </div>
+
+</body>
+</html>
+
+
+</head>
+<body>
+  <div class="letter-container">
+<p>Donald Trump’s public comments about his daughter Ivanka have been called “creepy” and “unsettling” for years—but let’s be honest: that’s putting it way too lightly. These are not just offhand jokes or awkward slip-ups. When a grown man repeatedly sexualizes his own daughter on national TV, talks about her looks like she’s an object, and gets praised or excused for it because he’s rich or powerful, it sends a loud, horrifying message: that women are meant to be looked at, judged, and controlled—even by the people who are supposed to love and protect them.<br>In a world where so many survivors of abuse already feel ignored or blamed, seeing someone like Trump rise to the presidency while making these kinds of remarks is a slap in the face. It shows how deeply our society still tolerates misogyny, especially when it’s disguised as “just a joke” or brushed off because “that’s just how he is.” But there’s nothing funny or harmless about a man saying he’d date his daughter if she weren’t his daughter. That’s not humor. That’s grooming culture, normalized.<br>As high schoolers, many of us are still figuring out our identities, boundaries, and voices. We deserve to live in a world where powerful people don’t get to publicly objectify others—especially their own children—without consequences. This isn’t just about Trump. It’s about what kind of behavior we accept from leaders, what kind of values we normalize, and whether we choose to protect power or protect people.<br>Let’s call it what it is: disturbing, unacceptable, and a reminder that we have to keep pushing back against every system that lets people like him say these things and still be taken seriously.</p>
+  </div>
+</body>
+</html>
