--- a/from-the-editor.html
+++ b/from-the-editor.html
@@ -32,6 +32,7 @@
     </ul>
         <li><a href="from-the-editor5-28-25.html">May 28, 2025</li>
         <li><a href="from-the-editor5-29-25.html">May 29, 2025</li>
+        <li><a href="from-the-editor5-31-25.html">May 31, 2025</li>
 
     </div>
 </body>
