--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<body class="contact">
+
 <head>
      <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
