--- a/posts.html
+++ b/posts.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <body class="posts">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
