--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The World From the View of a High Schooler</title>
+    <title>The World from the View of a High Schooler</title>
    
 </head>
 <body>
@@ -27,7 +27,7 @@
     </nav>
 
     <div class="content">
-      <h1>The World From the View of a High Schooler</h1>
+      <h1>The World from the View of a High Schooler</h1>
       <p>This is a website, made by high schoolers, for high schoolers exploring life through the eyes of a high schooler.</p>
       <a href="contact.html" class="btn">Get In Touch</a>
     </div>
