--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,7 @@
         <h1>Contact Us</h1>
         <p>Thank you for visiting our website.<br>We hope we can continue to keep you informed.</p>
         <p>Email the editor: arttani.artist@gmail.com</p>
+        <p>Visit our instagram: https://www.instagram.com/_povhs_/</p>
         <p>Have a nice day, and feel free to reach out if you want to see any of your work posted or if you have any comments.</p>
     </div>
 
