--- a/posts.html
+++ b/posts.html
@@ -31,7 +31,8 @@
         <h2>Posts</h2>
 
     </ul>
-        <li><a href="weird-dangerous.html"> This Isn’t Just ‘Weird’—It’s Dangerous</li>
+        <li><a href="weird-dangerous.html"> This Isn’t Just ‘Weird’—It’s Dangerous</li>,
+        <li><a href="ice-is-melting.html"> ICE Protests Shake L.A. and Austin</li>
     </div>
 </body>
 </html>
