--- a/ice-is-melting.html
+++ b/ice-is-melting.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+    <body class="posts">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ICE Protests Shake L.A. and Austin</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="download.png">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
+<nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="letters.html">Letters</a>
+        <a href="poetry-prose.html"> Poetry and Prose</a>
+        <a href="art.html"> Art</a>
+        <a href="posts.html"> Posts</a>
+        <a href="contact.html">Contact</a>
+        <a href="from-the-editor.html"> From the Editor</a>
+    </nav>
+
+    <div class="content">
+        <h1>ICE Protests Shake L.A. and Austin</h1>
+            <p>Written by: Anonymous<br>
+
+    </div>
+
+</body>
+</html>
+
+
+</head>
+<body>
+  <div class="letter-container">
+<p>In early June 2025, waves of protest erupted in both Los Angeles and Austin as communities rose up against aggressive ICE raids targeting immigrant workers. In L.A., thousands rallied outside federal buildings and along downtown streets after ICE conducted multiple workplace sweeps. While some people clashed with law enforcement—blocking freeways, throwing objects, and confronting riot police—the confrontations remained largely confined to a few blocks, contrary to viral claims of citywide chaos . <br>President Trump responded by deploying 2,000 National Guard troops and 700 Marines without California’s approval, prompting Governor Newsom to file a lawsuit over federal overreach (6abc.com). Despite the military presence, the bulk of crowd control fell to LAPD, which used tear gas, rubber bullets, and flash-bangs—injuring journalists, protesters, and even horses (en.wikipedia.org).<br>Meanwhile, in Austin, hundreds marched in solidarity outside the federal building. Tear gas was deployed, and at least 13 protesters were arrested while several police officers were injured by projectiles thrown during moments of tension (texastribune.org).<br>These actions in both cities demonstrate growing national resistance toward what many see as militarized and inhumane immigration enforcement—fuelling solidarity protests nationwide, from Chicago to Seattle (apnews.com). Authorities in L.A. have imposed overnight curfews, and activists are planning more demonstrations across the country this weekend (hindustantimes.com).</p>
+</div>
+</body>
+</html>
