--- a/poetry-prose.html
+++ b/poetry-prose.html
@@ -30,7 +30,7 @@
 
         <h2>Posts</h2>
     </ul>
-        <li><a href="#">Coming soon...</li>
+        <li><a href="what-they-dont-know.html">What They Don't Know</li>
     </div>
 </body>
 </html>
