--- a/what-they-dont-know.html
+++ b/what-they-dont-know.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html lang="en">
+<body class="letter">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>What They Dont Know</title>
+    <link rel="stylesheet" href="styles.css">
 
+    <link rel="icon" type="image/png" href="download.png">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+<nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="letters.html">Letters</a>
+        <a href="poetry-prose.html"> Poetry and Prose</a>
+        <a href="art.html"> Art</a>
+        <a href="posts.html"> Posts</a>
+        <a href="contact.html">Contact</a>
+        <a href="from-the-editor.html"> From the Editor</a>
+    </nav>
+
+    <div class="content">
+        <h1>What They Don't Know</h1>
+            <p>By Anon<br>
+
+    </div>
+
+</body>
+</html>
+
+
+</head>
+<body>
+    <div class="letter-container">
+        <p>They don’t know.<br>They’re standing right outside my house of cards<br>frail as the glass heart in me,<br>peering through the cracks of the flimsy structure. <br>And they don’t know.<br>Their eyes bore into me<br>with an intensity strong rivaling the pain that adorns me,<br>clotting the cuts that dress my sullied skin<br>And they don’t know.<br>And I don’t know.<br><br>Their looming gazes blur with tears of my making,<br>blending with the burning stabs that riddle my tainted figure.<br>And they don’t know.<br>They don’t know.<br>They’ll never know.<br><br>That no matter how much these thorns interwine,<br>drawing out the sin that runs through my veins,<br>I’ll enjoy it.<br>If even for a second, <br>I’ll enjoy it.<br>And they will never know.</p>
+    </div>
+</body>
+</html>
