--- a/posts.html
+++ b/posts.html
@@ -33,6 +33,7 @@
     </ul>
         <li><a href="weird-dangerous.html"> This Isn’t Just ‘Weird’—It’s Dangerous</li>
         <li><a href="ice-is-melting.html"> ICE Protests Shake L.A. and Austin</li>
+        <li><a href="book-bans.html"> Book Bans Are Surging Across the U.S. - Here’s What That Means for Students</li>
     </div>
 </body>
 </html>
