--- a/reflection.html
+++ b/reflection.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html lang="en">
+<body class="poetry">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reflection</title>
+    <link rel="stylesheet" href="styles.css">
 
+    <link rel="icon" type="image/png" href="download.png">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+<nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="letters.html">Letters</a>
+        <a href="poetry-prose.html"> Poetry and Prose</a>
+        <a href="art.html"> Art</a>
+        <a href="posts.html"> Posts</a>
+        <a href="contact.html">Contact</a>
+        <a href="from-the-editor.html"> From the Editor</a>
+    </nav>
+
+    <div class="content">
+        <h1>Reflection</h1>
+            <p>By Anon<br>
+
+    </div>
+
+</body>
+</html>
+
+
+</head>
+<body>
+    <div class="letter-container">
+        <p>When I look in the mirror,<br>what am I supposed to see?<br>A girl<br>brimming with knowledge<br>pumping joy through her veins<br>A girl<br>sweet and silent<br>yet loud<br>A personality enough to take up the room<br>A smile that prompts others to do the same<br><br>Because when I see<br>That damned reflection of mine,<br>behind those dark holes<br>I’ve grown accustomed to,<br>all I see is a soul<br><br>unguided <br>drawn to parallel worlds<br>yet wandering aimlessly for eons to come,<br>trapped in a body too small yet far too large<br>carrying the weight of a world<br>visible to no one at all,<br>sometimes not even to the soul<br>floating behind these muddled eyes<br>forever trapped in this accursed reflection of mine.</p>
+    </div>
+</body>
+</html>
