--- a/poetry-prose.html
+++ b/poetry-prose.html
@@ -31,6 +31,7 @@
         <h2>Posts</h2>
     </ul>
         <li><a href="what-they-dont-know.html">What They Don't Know</li>
+        <li><a href="reflection.html">Reflection</li>
     </div>
 </body>
 </html>
