--- a/letter-white-house.html
+++ b/letter-white-house.html
@@ -46,4 +46,22 @@
     </div>
   </div>
 </body>
+
+    <div id="disqus_thread"></div>
+<script>
+    
+    var disqus_config = function () {
+    this.page.url = this.page.url = 'https://arttani-artist.github.io/povhs/letter-white-house.html';  
+    this.page.identifier = this.page.identifier = 'letter-white-house'; 
+    };
+    
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://https-arttani-artist-github-io-povhs.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<script id="dsq-count-scr" src="//https-arttani-artist-github-io-povhs.disqus.com/count.js" async></script>
 </html>
