--- a/reflection.html
+++ b/reflection.html
@@ -39,4 +39,21 @@
         <p>When I look in the mirror,<br>what am I supposed to see?<br>A girl<br>brimming with knowledge<br>pumping joy through her veins<br>A girl<br>sweet and silent<br>yet loud<br>A personality enough to take up the room<br>A smile that prompts others to do the same<br><br>Because when I see<br>That damned reflection of mine,<br>behind those dark holes<br>I’ve grown accustomed to,<br>all I see is a soul<br><br>unguided <br>drawn to parallel worlds<br>yet wandering aimlessly for eons to come,<br>trapped in a body too small yet far too large<br>carrying the weight of a world<br>visible to no one at all,<br>sometimes not even to the soul<br>floating behind these muddled eyes<br>forever trapped in this accursed reflection of mine.</p>
     </div>
 </body>
+    <div id="disqus_thread"></div>
+<script>
+    
+    var disqus_config = function () {
+    this.page.url = this.page.url = 'https://arttani-artist.github.io/povhs/reflection.html';  
+    this.page.identifier = this.page.identifier = 'reflection'; 
+    };
+    
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://https-arttani-artist-github-io-povhs.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<script id="dsq-count-scr" src="//https-arttani-artist-github-io-povhs.disqus.com/count.js" async></script>
 </html>
