--- a/what-they-dont-know.html
+++ b/what-they-dont-know.html
@@ -39,4 +39,21 @@
         <p>They don’t know.<br>They’re standing right outside my house of cards<br>frail as the glass heart in me,<br>peering through the cracks of the flimsy structure. <br>And they don’t know.<br>Their eyes bore into me<br>with an intensity strong rivaling the pain that adorns me,<br>clotting the cuts that dress my sullied skin<br>And they don’t know.<br>And I don’t know.<br><br>Their looming gazes blur with tears of my making,<br>blending with the burning stabs that riddle my tainted figure.<br>And they don’t know.<br>They don’t know.<br>They’ll never know.<br><br>That no matter how much these thorns interwine,<br>drawing out the sin that runs through my veins,<br>I’ll enjoy it.<br>If even for a second, <br>I’ll enjoy it.<br>And they will never know.</p>
     </div>
 </body>
+    <div id="disqus_thread"></div>
+<script>
+    
+    var disqus_config = function () {
+    this.page.url = this.page.url = 'https://arttani-artist.github.io/povhs/what-they-dont-know.html';  
+    this.page.identifier = this.page.identifier = 'what-they-dont-know'; 
+    };
+    
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://https-arttani-artist-github-io-povhs.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<script id="dsq-count-scr" src="//https-arttani-artist-github-io-povhs.disqus.com/count.js" async></script>
 </html>
