--- a/i-dont-care.html
+++ b/i-dont-care.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
+<body class="poetry">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Untitled</title>
+    <link rel="stylesheet" href="styles.css">
 
+    <link rel="icon" type="image/png" href="download.png">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+<nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="letters.html">Letters</a>
+        <a href="poetry-prose.html"> Poetry and Prose</a>
+        <a href="art.html"> Art</a>
+        <a href="posts.html"> Posts</a>
+        <a href="contact.html">Contact</a>
+        <a href="from-the-editor.html"> From the Editor</a>
+    </nav>
+
+    <div class="content">
+        <h1>Untitled</h1>
+            <p>By Anonymous<br>
+
+    </div>
+
+</body>
+</html>
+
+
+</head>
+<body>
+    <div class="letter-container">
+        <p></p>
+    </div>
+</body>
+    <div id="disqus_thread"></div>
+<script>
+    
+    var disqus_config = function () {
+    this.page.url = this.page.url = 'https://arttani-artist.github.io/povhs/i-dont-care.html';  
+    this.page.identifier = this.page.identifier = 'i-dont-care'; 
+    };
+    
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://https-arttani-artist-github-io-povhs.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<script id="dsq-count-scr" src="//https-arttani-artist-github-io-povhs.disqus.com/count.js" async></script>
+</html>
