--- a/i-dont-care.html
+++ b/i-dont-care.html
@@ -36,7 +36,8 @@
 </head>
 <body>
     <div class="letter-container">
-        <p></p>
+        <p>I don’t care.<br>Stop telling me to do well in school.<br>What’s the point?<br>I’m stuck in the same routines every day<br>Nothing is different<br>My life is filled with homework.<br>I don’t do anything fun.<br>Why do I have so much homework?<br>Why do I constantly get pressured?<br>Why is this happening to me.<br>You just expect everything from me.<br>Just STOP!!<br>Let me live my life for once<br>I don’t want to work at a desk.<br>I don’t want to work a 9 to 5.<br>I want to be free.<br>I want to sing to the world.<br>And write my heart out<br>And explore the world.<br>Not be stuck doing notes all day.<br>You have so many expectations for me.<br>But I ask<br>What’s the point of caring about anything?<br>If you’re just going to end up working in an office all day?<br>And not having any creativity?<br>I believe that caring about life means doing the things you love.<br>Not by doing a boring office job.
+</p>
     </div>
 </body>
     <div id="disqus_thread"></div>
