--- a/absurd-and-obscene.html
+++ b/absurd-and-obscene.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book Bans Are Surging Across the U.S. - Here’s What That Means for Students</title>
+    <title>"It’s Absurd and Obscene": Queer Hate Still Alarms New Hampshire Youth</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="download.png">
     <link rel="stylesheet" href="styles.css">
@@ -23,8 +23,8 @@
     </nav>
 
     <div class="content">
-        <h1>Book Bans Are Surging Across the U.S. - Here’s What That Means for Students</h1>
-            <p>Written by: Araya<br>
+        <h1>"It’s Absurd and Obscene": Queer Hate Still Alarms New Hampshire Youth</h1>
+            <p>By: Dhruv<br>
 
     </div>
 
