--- a/posts.html
+++ b/posts.html
@@ -34,6 +34,7 @@
         <li><a href="weird-dangerous.html"> This Isn’t Just ‘Weird’—It’s Dangerous</li>
         <li><a href="ice-is-melting.html"> ICE Protests Shake L.A. and Austin</li>
         <li><a href="book-bans.html"> Book Bans Are Surging Across the U.S. - Here’s What That Means for Students</li>
+        <li><a href="absurd-and-obscene.html"> "It’s Absurd and Obscene": Queer Hate Still Alarms New Hampshire Youth</li>
     </div>
 </body>
 </html>
