--- a/absurd-and-obscene.html
+++ b/absurd-and-obscene.html
@@ -51,8 +51,8 @@
 <script>
     
     var disqus_config = function () {
-    this.page.url = this.page.url = 'https://arttani-artist.github.io/povhs/book-bans.html';  
-    this.page.identifier = this.page.identifier = 'book-bans'; 
+    this.page.url = this.page.url = 'https://arttani-artist.github.io/povhs/absurd-and-obscene.html';  
+    this.page.identifier = this.page.identifier = 'absurd-and-obscene'; 
     };
     
     (function() { // DON'T EDIT BELOW THIS LINE
