--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
       <p>This is a website, made by high schoolers, for high schoolers exploring life through the eyes of a high schooler.</p>
       <a href="contact.html" class="btn">Get In Touch</a>
     </div>
+<div class="content">
+        <h2>BREAKING NEWS</h2>
 
+    </ul>
+        <li><a href="bombed-iran.html"> U.S. Strikes Three Iranian Nuclear Sites Under Trump Orders </li>
+    </div>
 </body>
 </html>
