--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <h2>BREAKING NEWS</h2>
 
     </ul>
-        <li><a href="bombed-iran.html"> U.S. Strikes Three Iranian Nuclear Sites Under Trump Orders </li>
+        <li><a href="bombed-iran.html">U.S. Strikes Three Iranian Nuclear Sites Under Trump Orders </li>
+        <li><a href="bombed-iran-update.html">U.S. Warned Israel Before Striking Iran, Signaling Coordinated Escalation </li>
     </div>
 </body>
 </html>
