--- a/posts.html
+++ b/posts.html
@@ -35,6 +35,8 @@
         <li><a href="ice-is-melting.html"> ICE Protests Shake L.A. and Austin</li>
         <li><a href="book-bans.html"> Book Bans Are Surging Across the U.S. - Here’s What That Means for Students</li>
         <li><a href="absurd-and-obscene.html"> "It’s Absurd and Obscene": Queer Hate Still Alarms New Hampshire Youth</li>
+        <li><a href="bombed-iran.html">U.S. Strikes Three Iranian Nuclear Sites Under Trump Orders </li>
+        <li><a href="bombed-iran-update.html">U.S. Warned Israel Before Striking Iran, Signaling Coordinated Escalation </li>
     </div>
 </body>
 </html>
