--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     </ul>
         <li><a href="bombed-iran.html">U.S. Strikes Three Iranian Nuclear Sites Under Trump Orders </li>
         <li><a href="bombed-iran-update.html">U.S. Warned Israel Before Striking Iran, Signaling Coordinated Escalation </li>
+        <li><a href="bombed-iran-update-2.html">Timeline & Analysis of Strikes on Iranian Nuclear Sites</li>
+
     </div>
 </body>
 </html>
