--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <li><a href="bombed-iran-update.html">U.S. Warned Israel Before Striking Iran, Signaling Coordinated Escalation </li>
         <li><a href="bombed-iran-update-2.html">Timeline & Analysis of Strikes on Iranian Nuclear Sites</li>
         <li><a href="bombed-iran-update-3.html">Trump Addresses Nation After Airstrikes on Iranian Nuclear Sites</li>
+        <li><a href="psa-wth.html"> PSA: What the Hell Is Going On?</li>
 
     </div>
 </body>
