--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         <li><a href="bombed-iran-update.html">U.S. Warned Israel Before Striking Iran, Signaling Coordinated Escalation </li>
         <li><a href="bombed-iran-update-2.html">Timeline & Analysis of Strikes on Iranian Nuclear Sites</li>
         <li><a href="bombed-iran-update-3.html">Trump Addresses Nation After Airstrikes on Iranian Nuclear Sites</li>
-        <li><a href="psa-wth.html"> PSA: What the Hell Is Going On?</li>
+        <li><a href="psa-wth.html">  <p style="font-size: 22px;"><strong>PSA: What the Hell Is Going On?</strong><br></p></li>  
+
 
     </div>
 </body>
