--- a/from-the-editor.html
+++ b/from-the-editor.html
@@ -35,6 +35,8 @@
         <li><a href="from-the-editor5-29-25.html">May 29, 2025</li>
         <li><a href="from-the-editor6-10-25.html">June 10, 2025</li> 
         <li><a href="from-the-editor6-20-25.html">June 20, 2025</li> 
+        <li><a href="from-the-editor6-21-25.html">June 20, 2025</li> 
+
 
     </div>
 </body>
