--- a/from-the-editor.html
+++ b/from-the-editor.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Blog</title>
+    <title>From the Editor</title>
     <link rel="stylesheet" href="styles.css">
     
     <link rel="icon" type="image/png" href="download.png">
